--- a/NEWS
+++ b/NEWS
@@ -75,7 +75,7 @@ BUG FIXES
     o	More efficient utf8ToInt() on long multi-byte strings with
 	many multi-byte characters.  (PR#14262)
 
-    o	aggregate.ts() gave platform-depedent results due to rounding
+    o	aggregate.ts() gave platform-dependent results due to rounding
 	error for ndeltat != 1.
 
     o 	package.skeleton() sometimes failed to fix filenames for .R or
