ported r52376 [weighted.mean(*, NA)] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52412 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -25,9 +25,12 @@ BUG FIXES
 
     o	Text help rendering of \tabular{} has been improved: under
  	some circumstances leading blank columns were not rendered.
- 	
+
     o	strsplit(x, fixed=TRUE) marked UTF-8 strings with the local
-	encoding when no splits were found.    	
+	encoding when no splits were found.
+
+    o	weighted.mean(NA, na.rm=TRUE) and similar now returns NaN again,
+	as it did previously to R 2.10.0.
 
 
 
