--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2601,13 +2601,13 @@ Roman and Courier New, and contain fonts rather similar to the first two
 The bitmapped graphics devices @code{jpeg()}, @code{png()} and
 @code{tiff()} need the appropriate headers and libraries installed:
 @code{jpeg} (version 6b or later) or @code{libpng} (version 1.2.3 or
-later, including 1.4.0) and @code{zlib} (version 1.1.3 or later) or
+later, including 1.4.x) and @code{zlib} (version 1.1.3 or later) or
 @code{libtiff} (any recent version of 3.x.y -- 3.8.2 and 3.9.1 have been
 tested) respectively.
 
 If you have them installed (including the appropriate headers and of
 suitable versions), @code{zlib}, @code{libbz2} and PCRE will be used if
-specified by @option{--with-system-zlib} (version 1.2.4 or later),
+specified by @option{--with-system-zlib} (version 1.2.5 or later),
 @option{--with-system-bzlib} or @option{--with-system-pcre}: otherwise
 versions in the @R{} sources will be compiled in.  As the latter suffice
 and are tested with @R{} you should not need to change this.
