document alternative form of --encoding
git-svn-id: https://svn.r-project.org/R/trunk@52418 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-intro.texi
+++ b/doc/manual/R-intro.texi
@@ -6865,7 +6865,7 @@ Print version information to standard output and exit successfully.
 @item --encoding=@var{enc}
 Specify the encoding to be assumed for input from the console or
 @code{stdin}.  This needs to be an encoding known to @code{iconv}: see
-its help page.
+its help page.  (@code{--encoding @var{enc}} is also accepted.)
 
 @item RHOME
 Print the path to the @R{} ``home directory'' to standard output and
