--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -175,7 +175,7 @@ Windows you may need to confirm that you want to proceed with installing
 a program from an `unidentified publisher'.
 
 After installation you should choose a working directory for R.  You
-will have a shortcut to @file{@RWVER@\bin\Rgui.exe} on your desktop
+will have a shortcut to @file{Rgui.exe} on your desktop
 and/or somewhere on the Start menu file tree, and perhaps also in the
 Quick Launch part of the taskbar.  Right-click each shortcut, select
 Properties... and change the `Start in' field to your working directory.
@@ -312,15 +312,14 @@ running @code{update.packages(checkBuilt=TRUE, ask=FALSE)}.
 @section There seems to be a limit on the memory it uses!
 
 Indeed there is.  It is set by the command-line flag
-@option{--max-mem-size} (@pxref{How do I install R for Windows?}) and
+@option{--max-mem-size} (@pxref{How do I install R for Windows?}) and R
 defaults to the smaller of the amount of physical RAM in the machine and
-0.5GB less than the limit of user virtual memory for a process (most
-often 2GB on a 32-bit build).  It can be set to any amount between 32Mb
-and 4095Mb (on a 32-bit build).
+0.5GB less than the limit on user virtual memory for a process (most
+often 2GB on a 32-bit build).
 
 Use @code{?Memory} and @code{?memory.size} for information about memory
-usage.  The limit can be raised by calling @code{memory.limit} within a
-running R session.
+usage.  The limit can be raised (if possible) by calling
+@code{memory.limit} within a running R session.
 
 The 32-bit executables @file{Rgui.exe} and @file{Rterm.exe} support up
 to 3GB of user address space per process under suitably enabled versions
@@ -418,9 +417,9 @@ variable @env{HOME} is set, its value is used.  After those two
 user-controllable settings, R tries to find system-defined home
 directories.  It first tries to use the Windows "personal" directory
 (typically @file{C:\Documents and Settings\username\My Documents} on
-Windows XP and @file{C:\Users\username\Documents} on Vista).  If that
-fails, if both environment variables @env{HOMEDRIVE} and @env{HOMEPATH}
-are set (and they normally are), the value is
+Windows XP and @file{C:\Users\username\Documents} on Vista/Windows 7).
+If that fails, if both environment variables @env{HOMEDRIVE} and
+@env{HOMEPATH} are set (and they normally are), the value is
 @file{$@{HOMEDRIVE@}$@{HOMEPATH@}}.  If all of these fail, the current
 working directory is used.
 
@@ -813,7 +812,7 @@ available from @url{http://cran.r-project.org/bin/windows64/base/}.
 Most binary packages are available from CRAN or CRANextras (including
 some from Omegahat and @code{Rgraphviz}), but fewer hard-to-install
 packages are available than for the standard 32-bit build.  A subset of
-Bioconductor packages are available.
+Bioconductor packages is available.
 
 
 @node Should I run 32-bit or 64-bit R?, Can both 32- and 64-bit R be installed on the same machine?, Can I use R on 64-bit Windows?, Installation and Usage
@@ -1209,7 +1208,9 @@ Tcl/Tk 8.5.x installation with the path to its @file{bin} directory
 given by value of @env{MY_TCLTK}, and that this is set up correctly
 (with @env{TCL_LIBRARY} set if needed).  In that case you do not need
 the Tcl/Tk support files installed (but they can be).  Note that you do
-need 8.5.x and not 8.4.x nor (a pre-release of) 8.6.0.
+need 8.5.x and not 8.4.x nor (a pre-release of) 8.6.0, and you do need
+the architecture to match, that is a 32-bit or 64-bit build of Tcl/Tk to
+match the R build in use.
 
 Several package authors have suggested using ActiveTcl
 (@uref{http://www.activestate.com/Products/activetcl/}) as a way to get
@@ -1545,9 +1546,8 @@ compiler, and the MinGW-w64 port of @code{binutils} and @code{gcc} is
 finally mature enough to produce a working version of R, so support has
 been added as from R 2.11.0: see the manual.  You are welcome to try a
 commercial compiler@footnote{such as those from Intel and PGI: there is
-no Fortran compiler in the Microsoft set, but @code{f2c} could be
-used.}, and pre-compiled versions using such compilers are available
-from R redistributors.
+no Fortran compiler in the Microsoft set.}, and pre-compiled versions
+using such compilers are available from R redistributors.
 
 @node Can I use a fast BLAS?, How do I include compiled C code?, How can I compile R from source?, Building from Source
 @section  Can I use a fast BLAS?
@@ -1777,7 +1777,7 @@ call @code{R_ProcessEvents()} periodically from your compiled code.
 If you want output to be updated on the console, call
 @code{R_FlushConsole()} and then @code{R_ProcessEvents()}.
 
-@set LASTEDIT 2010-04-03
+@set LASTEDIT 2010-07-01
 @ifhtml
 @html
 <hr WIDTH="100%">
