be consistent with / vs \
git-svn-id: https://svn.r-project.org/R/trunk@52427 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -1095,7 +1095,7 @@ Suppose your packages are installed in @file{p:\myRlib}.  Then you can
 EITHER
 
 @example
-set the environment variable R_LIBS to p:\myRlib before starting R
+set the environment variable R_LIBS to p:/myRlib before starting R
 @end example
 
 OR use a package by, e.g.@:
