match() and hence %in% now deal with "POSIXlt" consistently with e.g. "POSIXct"
git-svn-id: https://svn.r-project.org/R/trunk@52431 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -339,6 +339,9 @@ CHANGES IN R VERSION 2.12.0:
     • \Sexpr[result=rd] in an Rd file added a spurious newline, which
       was displayed as extra whitespace when rendered.
 
+    • match(x, table) (and hence %in%) now treat "POSIXlt" consistently
+      as, e.g., "POSIXct".
+
 CHANGES IN R VERSION 2.11.1 patched:
 
   NEW FEATURES:
