--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -2443,7 +2443,8 @@ that you use only portable make features.  Such files should be
 LF-terminated (including the final line of the file) and not make use of
 GNU extensions.  Commonly misused GNU extensions are conditional
 inclusions (@code{ifeq} and the like), @code{$@{shell ...@}} and
-@code{$@{wildcard ...@}}, and the use of @code{+=} and @code{:=}.
+@code{$@{wildcard ...@}}, and the use of @code{+=} and @code{:=}.  Also,
+the use of @code{$<} other than in implicit rules is a GNU extension.
 Unfortunately makefiles which use GNU extensions often run on other
 platforms but do not have the intended results.
 
