--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,9 @@ NEW FEATURES
     	which can be used to pass options to R CMD INSTALL for
     	source-package installs.
 
+    o	R CMD check runs the package-specific tests with LANGUAGE=en
+	set, to facilitate comparison to .Rout.save files.
+
 
 BUG FIXES
 
